[DARU-015] - Added 2 new JHipster Apps (Spring and Quarkus).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,42 @@
 application.name=azimuteERPQuarkusAngularMonolith02
+quarkus.http.port=18080
+
+quarkus.http.host-enabled=true
+quarkus.http.host=clientapp-03.darueira-devlocal.org.de
+quarkus.http.ssl-port=18443
+
+
+# quarkus.http.ssl.certificate.key-store-file=config/tls/devlocal-darueira-keystore.jks
+# quarkus.http.ssl.certificate.key-store-file-type=JKS
+quarkus.http.ssl.certificate.key-store-file=config/tls/darueira-devlocal.org.de-pkcs.p12
+quarkus.http.ssl.certificate.key-store-file-type=PKCS12
+quarkus.http.ssl.certificate.key-store-key-alias=darueira-for-all-apps-cert-01
+quarkus.http.ssl.certificate.key-store-password=pwd1a88a1
+quarkus.http.ssl.protocols=TLSv1.2,TLSv1.3
+
+quarkus.http.proxy.proxy-address-forwarding=true
+quarkus.http.proxy.allow-xforwarded=true
+quarkus.http.proxy.allow-forwarded=true
+quarkus.http.proxy.enable-forwarded-host=true
+quarkus.http.proxy.enable-forwarded-prefix=true
+
+# quarkus.http.insecure-requests=redirect
+
+quarkus.console.color=false
 
 ## configure your datasource
 quarkus.datasource.db-kind=postgresql
 
-%dev.quarkus.datasource.devservices.image-name=postgres:16.2
-%dev.quarkus.datasource.devservices.port=5432
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/azimuteERPQuarkusAngularMonolith02
-%prod.quarkus.datasource.username=azimuteERPQuarkusAngularMonolith02
-%prod.quarkus.datasource.password=
+# %dev.quarkus.datasource.devservices.image-name=postgres:16.2
+# %dev.quarkus.datasource.devservices.port=5432
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://postgresql.darueira-devlocal.org.de:5432/DBDarueiraApps01?currentSchema=schm02&ApplicationName=AppLab02AzimuteERPQuarkusMonolith&ssl=false
+%dev.quarkus.datasource.username=dbadarueiraapps01
+%dev.quarkus.datasource.password=1a88a1
+
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://postgresql.darueira-devlocal.org.de:5432/DBDarueiraApps01?currentSchema=schm02&ApplicationName=AppLab02AzimuteERPQuarkusMonolith&ssl=false
+%prod.quarkus.datasource.username=dbadarueiraapps01
+%prod.quarkus.datasource.password=1a88a1
+
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
 quarkus.hibernate-orm.database.generation=none
@@ -192,9 +221,9 @@ quarkus.native.additional-build-args=\
 
 # OAuth 2.0 and OIDC
 quarkus.oidc.enabled=true
-quarkus.oidc.auth-server-url=http://localhost:9080/realms/jhipster
-quarkus.oidc.client-id=web_app
-quarkus.oidc.credentials.secret=web_app
+quarkus.oidc.auth-server-url=https://sso.darueira-devlocal.org.de/auth/realms/dexterity-apps
+quarkus.oidc.client-id=applab02-azimuteerp-quarkus-monolith
+quarkus.oidc.credentials.secret=PnVqTPcN0OH5ZzLD8JfaTpSzNi0TKniS
 quarkus.oidc.application-type=hybrid
 quarkus.oidc.authentication.scopes=profile,address,email,phone,offline_access
 quarkus.oidc.authentication.cookie-path=/
@@ -207,8 +236,9 @@ quarkus.oidc.token.refresh-expired=true
 quarkus.oidc.token.refresh-token-time-skew=10S
 quarkus.oidc.token-state-manager.split-tokens=true
 
-%test.quarkus.oidc.auth-server-url=http://localhost:9080/realms/jhipster
-%test.quarkus.oidc.client-id=dummy
+%test.quarkus.oidc.auth-server-url=https://sso.darueira-devlocal.org.de/auth/realms/dexterity-apps
+%test.quarkus.oidc.client-id=applab02-azimuteerp-quarkus-monolith
 %test.quarkus.oidc.application-type=service
 %test.quarkus.oidc.token.refresh-expired=false
 %test.quarkus.oidc.token.refresh-token-time-skew=
+
