[DARU-018] - Added the 'applab04' as a Git Submodule and configured all aps with DB and Keycloak.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ application.name=azimuteERPQuarkusAngularMonolith02
 quarkus.http.port=18080
 quarkus.http.ssl-port=18443
 quarkus.http.host-enabled=true
-quarkus.http.host=clientapp-03.darueira-devlocal.org.de
+quarkus.http.host=clientapp-02.darueira-devlocal.org.de
 quarkus.http.limits.max-header-size=50K
 
 quarkus.http.ssl.certificate.key-store-file=config/tls/darueira-devlocal.org.de-pkcs.p12
@@ -22,9 +22,10 @@ quarkus.http.proxy.enable-forwarded-prefix=true
 quarkus.oidc.enabled=true
 quarkus.oidc.auth-server-url=https://sso.darueira-devlocal.org.de/auth/realms/dexterity-apps
 quarkus.oidc.client-id=applab02-azimuteerp-quarkus-monolith
-quarkus.oidc.credentials.secret=PnVqTPcN0OH5ZzLD8JfaTpSzNi0TKniS
+quarkus.oidc.credentials.secret=gSNlE7vfknVqlCk6bu0yOYkj5MFIAt49
 quarkus.oidc.application-type=hybrid
-quarkus.oidc.authentication.scopes=profile,address,email,phone,offline_access
+# quarkus.oidc.authentication.scopes=profile,address,email,phone,offline_access
+quarkus.oidc.authentication.scopes=openid,profile,email,offline_access
 quarkus.oidc.authentication.cookie-path=/
 quarkus.oidc.authentication.redirect-path=/login/oauth2/code/oidc
 quarkus.oidc.authentication.restore-path-after-redirect=false
